position relative for all the footers and spacing issue for testimonials

--- a/app/assets/styles/modules/_footer.scss
+++ b/app/assets/styles/modules/_footer.scss
@@ -26,7 +26,10 @@
 			}
 		}
 	}
-
+	.footer-bottom {background: #343a40;
+		color: #fff;
+		font-size: 13px; text-align: center;}
+		
 	.social-icons {
 
 		padding-top:20px;
