--- a/app/assets/styles/modules/_homePage.scss
+++ b/app/assets/styles/modules/_homePage.scss
@@ -2603,6 +2603,10 @@
 	  }
   }
   
+  .footer-bottom {background: #343a40;
+    color: #fff;
+	font-size: 13px; text-align: center; position: relative; z-index: 9}
+
   .footer-banner {
    //margin: 50px 0 0px 0;
 	  //height: 283px; 
