--- a/themes/custom/athena/assets/styles/modules/_homePage.scss
+++ b/themes/custom/athena/assets/styles/modules/_homePage.scss
@@ -2602,7 +2602,10 @@
 		  background-image: linear-gradient(89deg, #00a1e8 0%, #004fa1 100%);
 	  }
   }
-  
+  .footer-bottom {background: #343a40;
+    color: #fff;
+	font-size: 13px; text-align: center; position: relative; z-index: 9}
+	
   .footer-banner {
    //margin: 50px 0 0px 0;
 	  //height: 283px; 
